// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component renders correctly 1`] = `
<div
  class="relative block focus-within:border-purple-600 border-transparent border focus-within:rounded focus-within:shadow-select-focus"
>
  <span
    class="print:hidden flex absolute pointer-events-none items-center inset-y-0 right-0 w-10 pl-1 pr-1 text-white bg-pink-600 rounded-r shadow-bottom-gray focus:shadow-none"
  >
    <svgr-mock
      classname="h-full"
    />
  </span>
  <select
    class="print:p-1 text-gray-500 border-gray-400 border-y border-l w-full outline-none block text-md h-10 pl-3 pr-12 bg-white rounded focus:border-white tool-dd"
    name="language"
  >
    <option
      disabled=""
      selected=""
      value=""
    />
    <option
      value="en"
    >
      English
    </option>
    <option
      value="es"
    >
      Spanish
    </option>
  </select>
</div>
`;

exports[`Select component renders with empty item text 1`] = `
<div
  class="relative block focus-within:border-purple-600 border-transparent border focus-within:rounded focus-within:shadow-select-focus"
>
  <span
    class="print:hidden flex absolute pointer-events-none items-center inset-y-0 right-0 w-10 pl-1 pr-1 text-white bg-pink-600 rounded-r shadow-bottom-gray focus:shadow-none"
  >
    <svgr-mock
      classname="h-full"
    />
  </span>
  <select
    class="print:p-1 text-gray-500 border-gray-400 border-y border-l w-full outline-none block text-md h-10 pl-3 pr-12 bg-white rounded focus:border-white tool-dd"
    name="language"
  >
    <option
      disabled=""
      selected=""
      value=""
    >
      Select a language
    </option>
    <option
      value="en"
    >
      English
    </option>
    <option
      value="es"
    >
      Spanish
    </option>
  </select>
</div>
`;

exports[`Select component renders with hidden empty item 1`] = `
<div
  class="relative block focus-within:border-purple-600 border-transparent border focus-within:rounded focus-within:shadow-select-focus"
>
  <span
    class="print:hidden flex absolute pointer-events-none items-center inset-y-0 right-0 w-10 pl-1 pr-1 text-white bg-pink-600 rounded-r shadow-bottom-gray focus:shadow-none"
  >
    <svgr-mock
      classname="h-full"
    />
  </span>
  <select
    class="print:p-1 text-gray-500 border-gray-400 border-y border-l w-full outline-none block text-md h-10 pl-3 pr-12 bg-white rounded focus:border-white tool-dd"
    name="language"
  >
    <option
      value="en"
    >
      English
    </option>
    <option
      value="es"
    >
      Spanish
    </option>
  </select>
</div>
`;

exports[`Select component renders with hidden placeholder 1`] = `
<div
  class="relative block focus-within:border-purple-600 border-transparent border focus-within:rounded focus-within:shadow-select-focus"
>
  <span
    class="print:hidden flex absolute pointer-events-none items-center inset-y-0 right-0 w-10 pl-1 pr-1 text-white bg-pink-600 rounded-r shadow-bottom-gray focus:shadow-none"
  >
    <svgr-mock
      classname="h-full"
    />
  </span>
  <select
    class="print:p-1 text-gray-500 border-gray-400 border-y border-l w-full outline-none block text-md h-10 pl-3 pr-12 bg-white rounded focus:border-white tool-dd"
    name="language"
  >
    <option
      disabled=""
      hidden=""
      selected=""
      value=""
    />
    <option
      value="en"
    >
      English
    </option>
    <option
      value="es"
    >
      Spanish
    </option>
  </select>
</div>
`;
